Update 'ckq7enbv1-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe:857e70c5cb71c8c4a270008d3a23e716b18445d5@sha256:322b62b8d53f285855aee8f1b8795e5dd91ae3c2dd3381d04b74ed6b48270f38

--- a/components/ckq7enbv1-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/ckq7enbv1-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ckq7enbv1-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:857e70c5cb71c8c4a270008d3a23e716b18445d5@sha256:322b62b8d53f285855aee8f1b8795e5dd91ae3c2dd3381d04b74ed6b48270f38
+          name: container-image
